--- a/parte1.qmd
+++ b/parte1.qmd
@@ -1,4 +1,4 @@
-# Fundamentos da Ciência de Dados
+# Fundamentos da Ciência de Dados {.unnumbered}
 
 Esta parte do livro tem como objetivo apresentar os fundamentos conceituais,
 organizacionais e metodológicos da Ciência de Dados, com foco em aplicações
