--- a/05_capitulo.qmd
+++ b/05_capitulo.qmd
@@ -26,28 +26,42 @@ próximos capítulos.
 Uma estrutura básica de projeto pode ser representada da seguinte forma:
 
 ``` markdown
-seunome_icd2025/
-├── dados/
-│   ├── brutos/     # dados originais, sem modificações
-│   └── limpos/     # dados após limpeza e transformações
-├── relatorios/
-│   └── 01-relatorio/
-|       └── 01_relatorio.qmd  
-|── scripts/
-|   ├── 01-importacao.R
-|   └── 02-preparacao.R
-|   └── 03-analise_exploratoria.R
-├── README.md
-└── seunome_icd2025.Rproj
+projeto_junglivet/
+├── dados/                     # arquivos de dados utilizados no projeto
+│   ├── brutos/                # dados originais, sem modificações
+│   └── limpos/                # dados após limpeza e transformações
+├── scripts/                   # scripts R organizados por etapa da análise
+│   ├── 01-importacao.R        # leitura e inspeção inicial dos dados
+│   ├── 02-preparacao.R        # limpeza, transformação e criação de variáveis
+│   └── 03-analise_exploratoria.R  # gráficos e estatísticas descritivas
+├── relatorios/                # relatórios reprodutíveis do projeto
+│   └── 01_relatorio.qmd       # relatório principal em Quarto
+├── README.md                  # descrição do projeto e instruções gerais
+├── .gitignore                 # arquivos e pastas ignorados pelo Git
+└── projeto_junglivet.Rproj    # arquivo do projeto RStudio
 ```
 
-Essa separação explícita evita que dados originais sejam sobrescritos,
+::: {.callout-note}
+## Fundamentos agora, ferramentas depois 
+
+Neste momento, não é esperado que o leitor domine a linguagem R, o uso de
+scripts, o sistema Quarto, o ambiente RStudio ou Git e GitHub. Nesta 
+primeira parte do livro, o objetivo é apresentar 
+**a lógica geral de um projeto de Ciência de Dados**, sua organização e 
+seu fluxo de trabalho.
+
+Essas ferramentas serão apresentadas e discutidas de forma sistemática na
+Parte 2. Após esse aprendizado, recomenda-se que o leitor retorne a esta
+seção para reinterpretar a estrutura do projeto à luz das ferramentas
+utilizadas para implementá-la.
+
+:::
+
+Essa separação explícita evita que dados originais sejam corrompidos,
 torna as etapas do processo analítico mais transparentes e facilita a
 verificação e a reprodução das análises realizadas. Além disso, diversas 
 instituições e empresas com alta maturidade analítica possuem uma estrutura 
 padronizada para projetos envolvendo código e dados.
-
-::: {.callout-tip}
 
 Na prática, recomendamos **fortemente** criar inicialmente um repositório vazio no
 GitHub, cloná-lo localmente e, na pasta clonada do repositório, criar um
@@ -55,7 +69,6 @@ projeto RStudio. A partir desse projeto, os arquivos e diretórios podem
 ser organizados de forma estruturada, com controle de versão via 
 Git e GitHub.
 
-:::
 
 ::: {.callout-tip}
 
@@ -339,7 +352,8 @@ Neste gráfico:
 (percentil 25) e o **terceiro quartil** (percentil 75), respectivamente.
 
 - As "hastes" (whiskers) se estendem até 1,5 vezes o intervalo 
-interquartil (IQR).
+interquartil (IQR) que é a diferença entre o terceiro e o 
+primeiro quartil. 
 
 - Pontos individuais além das hastes representam **outliers** 
 (valores atípicos)
@@ -397,6 +411,27 @@ boxplot), e
 Essa tabela ajuda a confirmar, com números, as diferenças sugeridas pelo
 gráfico e também permite avaliar o quanto os resultados podem ser afetados
 por tamanhos de amostra pequenos.
+
+::: {.callout-note}
+## Por que utilizamos mediana e IQR?
+
+Na análise exploratória, optamos por resumir os dados utilizando a
+**mediana** e o **intervalo interquartil (IQR)**, em vez da média e do
+desvio-padrão. Essa escolha não é arbitrária.
+
+Distribuições assimétricas ou com valores extremos (outliers) são comuns
+em dados reais de processos produtivos. Nessas situações, a média pode
+ser fortemente influenciada por poucos valores atípicos, enquanto a
+mediana representa melhor o comportamento típico dos dados. De forma
+análoga, o IQR fornece uma medida de dispersão mais robusta, coerente com
+a informação visual apresentada no boxplot.
+
+Esses conceitos — assimetria, medidas de posição e medidas de dispersão —
+serão estudados de forma sistemática na parte do livro dedicada à análise
+estatística. Neste momento, o objetivo é apenas compreender como essas
+medidas ajudam a interpretar padrões observados nos dados.
+
+:::
 
 ```{r}
 dados_destilaria_limpos %>%
