referencia crisp-dm atualizada

--- a/referencias.bib
+++ b/referencias.bib
@@ -70,12 +70,12 @@
 
 
 @manual{ibm_crisp_dm,
-  title        = {Guia do IBM SPSS Modeler CRISP-DM},
-  author       = {{IBM Corporation}},
-  organization = {IBM Corporation},
-  version      = {18, release 4, modificação 0},
-  year         = {2023},
-  note         = {Guia que descreve a metodologia CRISP-DM aplicada ao IBM SPSS Modeler}
+  title        = {CRISP-DM 1.0: Step-by-step data mining guide},
+  author       = {Chapman, Pete and Clinton, Julian and Kerber, Randy and Khabaza, Thomas and Reinartz, Thomas and Shearer, Colin and Wirth, R{\"u}diger},
+  organization = {CRISP-DM Consortium},
+  year         = {2000},
+  note         = {Documentação técnica para IBM SPSS Modeler},
+  url          = {https://public.dhe.ibm.com/software/analytics/spss/documentation/modeler/14.2/es/CRISP-DM.pdf}
 }
 
 
