--- a/parte1.qmd
+++ b/parte1.qmd
@@ -1,28 +1,29 @@
 # Fundamentos da Ciência de Dados {.unnumbered}
 
-Esta parte do livro tem como objetivo apresentar os fundamentos conceituais,
-organizacionais e metodológicos da Ciência de Dados, com foco em aplicações
-relevantes para a Administração e áreas afins. O propósito não é aprofundar
-técnicas específicas, mas construir uma base sólida para a compreensão do
-campo e para o uso consistente de métodos orientados por dados.
+Esta parte do livro tem como objetivo apresentar os fundamentos históricos,
+conceituais e metodológicos da chamada economia de dados e da
+Ciência de Dados. Busca-se fornecer uma base para a compreensão
+geral do campo e introduzir alguns métodos e princípios que considero
+relevantes.
 
 Ao longo dos capítulos que compõem esta parte, discutem-se as transformações
 históricas que levaram à consolidação da economia de dados, os principais
-papéis profissionais envolvidos em projetos analíticos, metodologias de
-organização do trabalho e os diferentes tipos de análise empregados na
-tomada de decisão. Esses elementos são apresentados de forma integrada,
-buscando reduzir a distância entre conceitos abstratos e práticas
-organizacionais concretas.
+papéis profissionais envolvidos na área, metodologias de organização do trabalho 
+e os diferentes tipos de análise empregados.
 
 A Parte I também introduz, de maneira gradual, princípios fundamentais de boas
 práticas em projetos de análise de dados, como organização de arquivos,
 reprodutibilidade e documentação. Esses princípios serão retomados e
-aprofundados ao longo do livro, acompanhando a evolução do conteúdo técnico.
+aprofundados ao longo do livro.
 
-Ao final desta parte, o leitor deverá ser capaz de compreender o que é a
-Ciência de Dados, por que ela se tornou central na Administração
+O último capítulo desta parte contém um estudo de caso que ilustra a
+metodologia CRISP-DM e apresenta, de forma introdutória, a organização de
+um projeto de análise de dados, o uso da linguagem R e uma análise
+descritiva simples.
+
+Ao final desta parte, espera-se que o leitor desenvolva uma visão geral da
+Ciência de Dados, por que ela se tornou central na economia de dados
 contemporânea, como projetos de dados são estruturados e de que forma
-conceitos, papéis e processos se articulam em um fluxo analítico coerente.
-Essa visão geral servirá como base para os capítulos seguintes, nos quais
-ferramentas, técnicas e aplicações práticas serão exploradas com maior
-profundidade.
+conceitos, ferramentas e processos se articulam. Essa visão geral servirá como 
+base para as partes e capítulos seguintes, nos quais veremos em mais detalhes 
+as ferramentas computacionais, técnicas e aplicações.
